--- a/css/style.css
+++ b/css/style.css
@@ -1186,7 +1186,7 @@ footer .copyrights {
     .card {
         /* margin-right: 5px; */
         margin: 0 auto;
-        width: 10.5rem;
+        width: 9.5rem;
     }
     .card-img-top {
         height: 350px!important;
@@ -1231,11 +1231,14 @@ footer .copyrights {
         font-size: 16px;
     }
 }
-@media (max-width: 430px) { 
+@media (max-width: 430px) {
     .card {
         /* margin-right: 5px; */
         margin: 0 auto;
-        width: 8.5rem;
+        width: 8rem;
+    }
+    .card .tomatometer span {
+        font-size: 9px!important;
     }
     .hero-content .movie-title {
         float: none!important;
@@ -1262,5 +1265,12 @@ footer .copyrights {
         height: 200px;
         padding: 15px;
         margin-bottom: 1.3rem;
+    }
+    .banner p {
+        font-size: 15px;
+    }
+    footer button {
+        margin-top: 10px;
+        margin-left: 30px;
     }
 }
